--- a/jquery/01.jquery_select/06_객체조작/object/index6.html
+++ b/jquery/01.jquery_select/06_객체조작/object/index6.html
@@ -103,5 +103,47 @@
          <div class="rightLine"></div>
       </div>
    </div>
+   <div class="box">
+      <h2>그룹 이벤트 등록하는방법1</h2>
+      <button class="btn1">button</button>
+      <hr>
+      <h2>그룹 이벤트 등록하는방법2</h2>
+      <button class="btn2">button</button>
+      <hr>
+      <h2>그룹 이벤트 등록하는방법3</h2>
+      <button class="btn3">button</button>
+   </div>
+   <div class="box">
+      <h2>preventDefault() 기본이벤트 차단</h2><br>
+      <p><a href="http://www.daum.net" class="btn4">다음버튼</a></p>
+      <p class="txt4">preventDefault()로 동작정지</p><br>
+      <p><a href="http://www.naver.com" class="btn5">네이버버튼</a></p>
+      <p class="txt5">return false로 동작정지</p><br>
+      <p><button class="btn6">구글버튼</button></p>
+      <p class="txt6">더블클릭 이벤트</p><br>
+   </div>
+   <div class="box">
+      <h2>마우스event</h2>
+      <h2>hover</h2>
+      <div class="hover">hover</div>
+      <h2>mouseenter/mouseleave</h2>
+      <div class="mouse">포인터영역</div>
+      <h2>focus/blur</h2>
+      <input type="text" class="focus">
+      <h2>mouseover/mouseout</h2>
+      <div class="mouse2">포인터영역</div>
+   </div>
+   <div class="box">
+      <h2>click</h2>
+      <div class="clickTitle">재미있나없나</div>
+      <div class="clickTitle">재미있나없나</div>
+      <div class="clickTitle">재미있나없나</div>
+      <div class="clickTitle">재미있나없나</div>
+      <div class="clickTitle">재미있나없나</div>
+      <div class="clickTitle">재미있나없나</div>
+      <div id="imgContainer" style="margin-top: 20px;">
+
+        </div>
+   </div>
 </body>
 </html>
