--- a/designHotel/index.html
+++ b/designHotel/index.html
@@ -34,47 +34,241 @@
 
 <!-- 로컬 js -->
 <script src='./js/script.js' defer></script>
+<script src='./js/video.js' defer></script>
 
 </head>
 <body>
 <!-- 시각장애인 웹 접근성을 위한 skip _ 지우지않아도 됩니다. -->
-
-<ul id='skip'>
-   <li><a href='#header'>헤더 바로가기</a></li>
-   <li><a href='#nav'>메뉴 바로가기</a></li>
-   <li><a href='#content'>내용 바로가기</a></li>
-</ul>
-
-<div id="wrap">
-    <header id="header">
-        <div class="header-pc-menu-wrap">
-            <aside>
-                <ul>
-                    <li><a href="#">Join</a></li>
-                    <li><a href="#">login</a></li>
-                    <li><a href="#">Subscribe</a></li>
-                </ul>
-            </aside>
-            <div class="header-logo-nav">
-                <div class="header-mobile-btn">
-                        <i class="fas fa-bars"></i>
+    <div id="wrap">
+        <header id="header">
+            <div class="mobile-menu">
+                <div class="mobile-menu-bar">
+                    <span class="menu-logoBt-wrap">
+                        <a href="#" class="logoBt" title="logo">
+                            <img src="./img/logo-icon-dh.png" alt="logo">
+                        </a>
+                    </span>
+                    <span class="menu-appBar-wrap">
+                        <a href="#" class="appbarCloseBt" title="CloseBt">
+                            <i class="fas fa-times"></i>
+                        </a>
+                    </span>
                 </div>
-                <h1><a href="#"><img src="./img/logo.png" alt="designhotelslogo"></a></h1>
-                <nav id="nav">
+                <div class="mobile-menu-list">
                     <ul>
-                        <li><a href="#"><i class="fas fa-search"></i></a></li>
-                        <li><a href="#" title="HOTELS & RESORTS">HOTELS & RESORTS</a></li>
-                        <li><a href="#" title="DEALS">DEALS</a></li>
-                        <li><a href="#" title="ORIGINAL EXPERIENCES">ORIGINAL EXPERIENCES</a></li>
-                        <li><a href="#" title="CULTURE">CULTURE</a></li>
-                        <li><a href="#" title="GALLERY">GALLERY</a></li>
-                        <li><a href="#" title="STORE">STORE</a></li>
-                        <li><a href="#" title="ABOUT US">ABOUT US</a></li>
+                        <li><a href="#">HOTELS & RESORTS</a></li>
+                        <li><a href="#">DEALS</a></li>
+                        <li><a href="#">ORIGINAL EXPERIENCES</a></li>
+                        <li><a href="#">CULTURE</a></li>
+                        <li><a href="#">GALLERY</a></li>
+                        <li><a href="#">STORE</a></li>
+                        <li><a href="#">ABOUT US</a></li>
                     </ul>
-                </nav>
+                </div>
+                <div class="mobile-menu-footer">
+                    <p>
+                        Become a member <br>
+                        to enjoy the best benefits!
+                    </p>
+                </div>
+                <div class="mobile-menu-footer-button">
+                    <button>JOIN</button>
+                    <button>LOGIN</button>
+                    <button>SUBSCRIBE</button>
+                </div>
+                <div class="mobile-menu-footer-sns">
+                    <span><a href="#"><i class="fab fa-facebook-f"></i></a></span>
+                    <span><a href="#"><i class="fab fa-instagram"></i></a></span>
+                    <span><a href="#"><i class="fab fa-twitter"></i></a></span>
+                    <span><a href="#"><i class="fab fa-youtube"></i></a></span>
+                    <span><a href="#"><i class="fab fa-pinterest-square"></i></a></span>
+                </div>
             </div>
-        </div>
-    </header>
-</div>
+            <div class="header-pc-menu-wrap">
+                <aside>
+                    <ul>
+                        <li><a href="#">Join</a></li>
+                        <li><a href="#">login</a></li>
+                        <li><a href="#">Subscribe</a></li>
+                    </ul>
+                </aside>
+                <div class="header-logo-nav">
+                    <div class="header-mobile-btn">
+                        <i class="fas fa-bars"></i>
+                    </div>
+                    <h1><a href="index.html"><img src="./img/logo.png" alt="logo"></a></h1>
+                    <nav id="nav">
+                        <ul>
+                            <li><a href="#"><i class="fas fa-search"></i></a></li>
+                             <li><a href="#" title="HOTELS & RESORTS">HOTELS & RESORTS</a></li>
+                            <li><a href="#" title="DEALS">DEALS</a></li>
+                            <li><a href="#" title="ORIGINAL EXPERIENCES">ORIGINAL EXPERIENCES</a></li>
+                            <li><a href="#" title="CULTURE">CULTURE</a></li>
+                            <li><a href="#" title="GALLERY">GALLERY</a></li>
+                            <li><a href="#" title="STORE">STORE</a></li>
+                            <li><a href="#" title="ABOUT US">ABOUT US</a></li>
+                        </ul>
+                    </nav>
+                    
+                </div>
+            </div>
+        </header>
+        <main id="main">
+            <section class="section1">
+                <div class="m-video">
+                    <video id="myvideo" src="./video/main.mp4" autoplay muted></video>
+                </div>
+                <div class="m-again">
+                    <h3><a href="javascript:" class="watchagain">again</a></h3>
+                </div>
+                <div class="m-next-section">
+                    <span><a href="#">explore stories</a></span>
+                </div>
+                <div class="m-icon-footer">
+                    <div class="icon-footer-left">
+                        <ul>
+                            <li><span><a href="#" class="videoIcon"><i class="fas fa-video"></i></a></span></li>
+                            <li><span><a href="#" class="worldIcon"><i class="fas fa-globe"></i></a></span></li>
+                        </ul>
+                    </div>
+                    <div class="icon-footer-center">
+                        <ul>
+                            <li><span><a href="#" class="nextIcon"><i class="fas fa-chevron-down"></i></a></span></li>
+                        </ul>
+                    </div>
+                    <div class="icon-footer-right">
+                        <ul>
+                            <li><span><a href="#" class="pauseIcon"><i class="fas fa-pause"></i></a></span></li>
+                            <li><span><a href="#" class="mutedIcon"><i class="fas fa-volume-mute"></i></a></span></li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="section2">
+                <ul>
+                    <li>
+                        <div>
+                            <div class="section2-title">Lorem ipsum dolor sit amet</div>
+                            <div class="section2-content">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quae itaque totam rem cum inventore doloribus aliquid veniam iste reprehenderit odit ipsam officia sapiente eveniet molestiae, distinctio possimus, a eius!
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <div class="section2-title">Aorem ipsum dolor sit amet</div>
+                            <div class="section2-content">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quae itaque totam rem cum inventore doloribus aliquid veniam iste reprehenderit odit ipsam officia sapiente eveniet molestiae, distinctio possimus, a eius!
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+            <section class="section3">
+                <div>
+                    <h2>Trending Offers</h2>
+                    <div class="tranding-wrap">
+                        <ul>
+                            <li><img src="https://www.designhotels.com/media/pkxfsvli/t-generic-01-nest-hotel-incheon-south-korea.jpg?width=479&height=598&format=webp&quality=80&rnd=133451401499070000" alt=""></li>
+                            <li><img src="https://www.designhotels.com/media/ifba3ezu/t-generic-02-iki-retreat-kairi-murakami-iki-island-japan.jpg?width=479&height=598&format=webp&quality=80&rnd=133451329689630000" alt=""></li>
+                            <li><img src="https://www.designhotels.com/media/qxvbharl/t-generic-01-bradford-house-oklahoma-united-states.jpg?width=479&height=598&format=webp&quality=80&rnd=133464200481230000" alt=""></li>
+                            <li><img src="https://www.designhotels.com/media/ztthkyn5/t-generic-01-musa-guerrero-mexico.jpg?width=479&height=598&format=webp&quality=80&rnd=133433931210470000" alt=""></li>
+                            <li><img src="https://www.designhotels.com/media/px1n1jdf/t-generic-nobis-hotel-palma-mallorca-spain.jpg?width=479&height=598&format=webp&quality=80&rnd=133451412321700000" alt=""></li>
+                            <li><img src="https://www.designhotels.com/media/3gmfhhqf/t-generic-otro-oaxaca-oaxaca-mexico.jpg?width=479&height=598&format=webp&quality=80&rnd=133409075652800000" alt=""></li>
+                            <li><img src="https://www.designhotels.com/media/dfwhdieo/t-generic-juno-hotel-sofia-sofia-bulgaria.jpg?width=479&height=598&format=webp&quality=80&rnd=133407320496470000" alt=""></li>
+                            <li><img src="https://www.designhotels.com/media/105bfwz2/t-generic-myconian-o-mykonos-greece.jpg?width=479&height=598&format=webp&quality=80&rnd=133408987806400000" alt=""></li>
+                            <li><img src="https://www.designhotels.com/media/rzwlpzst/t-generic-salt-of-palmar.jpg?width=479&height=598&format=webp&quality=80&rnd=133409072367100000" alt=""></li>
+                            <li><img src="https://www.designhotels.com/media/jq2dogdm/t-generic-palazzo-al-velabro-rome-italy.jpg?width=479&height=598&format=webp&quality=80&rnd=133409027743970000" alt=""></li>
+                            <li><img src="https://www.designhotels.com/media/c21cwc4f/t-generic-mamula-island-hotel-herceg-novi-montenegro.jpeg?width=479&height=598&format=webp&quality=80&rnd=133409095935430000" alt=""></li>
+                            <li><img src="https://www.designhotels.com/media/yn2nv4om/t-generic-the-luma-hotel-kota-kinabalu-malaysia.jpg?width=479&height=598&format=webp&quality=80&rnd=133409066059800000" alt=""></li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="section4">
+                <div>
+                    <h2 class="ir_so">Gallery</h2>
+                    <div class="page-tab tabMenu">
+                        <div class="container">
+                            <form action="#" id="gallery-filter" class="filter-form">
+                                <span class="form-item">
+                                    <input type="radio" name="filter" id="filter-all" value="all" checked>
+                                    <label for="fillter-all">ALL</label>
+                                </span>
+                                <span class="form-item">
+                                    <input type="radio" name="filter" id="filter-beach" value="beach">
+                                    <label for="fillter-beach">BEACH</label>
+                                </span>
+                                <span class="form-item">
+                                    <input type="radio" name="filter" id="filter-city" value="city">
+                                    <label for="fillter-city">CITY</label>
+                                </span>
+                                <span class="form-item">
+                                    <input type="radio" name="filter" id="filter-mountain" value="mountain">
+                                    <label for="fillter-mountain">MOUNTAIN</label>
+                                </span>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="gallery">
+                        <ul class="gallery-wrap">
+                            <li>
+                                <div>
+                                    <a href="#" class="galleryBt">
+                                        <span class="g-video">
+                                            <video src="./video/galleryVideo01.mp4" autoplay muted></video>
+                                            <div class="g-bg"></div>
+                                            <div class="g-title">
+                                                <span><strong>The Ride</strong></span>
+                                                <span><b>Lorem</b></span>
+                                                <span><i class="exploreBt">exploreBt</i></span>
+                                            </div>
+                                        </span>
+                                    </a>
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <a href="#" class="galleryBt">
+                                        <span class="g-video">
+                                            <video src="./video/galleryVideo01.mp4" autoplay muted></video>
+                                            <div class="g-bg"></div>
+                                            <div class="g-title">
+                                                <span><strong>The Ride</strong></span>
+                                                <span><b>Lorem</b></span>
+                                                <span><i class="exploreBt">exploreBt</i></span>
+                                            </div>
+                                        </span>
+                                    </a>
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <a href="#" class="galleryBt">
+                                        <span class="g-video">
+                                            <video src="./video/galleryVideo01.mp4" autoplay muted></video>
+                                            <div class="g-bg"></div>
+                                            <div class="g-title">
+                                                <span><strong>The Ride</strong></span>
+                                                <span><b>Lorem</b></span>
+                                                <span><i class="exploreBt">exploreBt</i></span>
+                                            </div>
+                                        </span>
+                                    </a>
+                                </div>
+                            </li>
+                        </ul>
+                        <div class="loadMore">
+                            <button class="loadMoreBt">Load More</button>
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer id="footer">
+
+        </footer>
+    </div>
 </body>
 </html>
